fix: adjust overflow method

--- a/website/components/io-card-container/style.module.css
+++ b/website/components/io-card-container/style.module.css
@@ -56,19 +56,20 @@
   --minCol: 250px;
   --columns: var(--length);
 
+  position: relative;
   display: grid;
   grid-template-columns: repeat(var(--columns), minmax(var(--minCol), 1fr));
   gap: 32px;
-  overflow-x: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  margin: 0 -24px;
-  padding: 6px 24px;
 
-  @media (--medium-up) {
+  @media (--small) {
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     margin: 0;
-    padding: 0;
-    overflow-x: unset;
+    padding: 6px 24px;
+    left: 50%;
+    margin-left: -50vw;
+    width: 100vw;
   }
 
   &.threeUp {
